// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`tokenizer should add double quoted escaped text 1`] = `
Object {
  "columns": Array [
    1,
    8,
    14,
  ],
  "lines": Array [
    2,
    2,
    2,
  ],
  "tokens": Array [
    "double",
    "quoted",
    "\\"text\\"s spaces\\"",
  ],
}
`;

exports[`tokenizer should add double quoted text 1`] = `
Object {
  "columns": Array [
    1,
    8,
    14,
  ],
  "lines": Array [
    2,
    2,
    2,
  ],
  "tokens": Array [
    "double",
    "quoted",
    "\\"text with spaces\\"",
  ],
}
`;

exports[`tokenizer should add expression 1`] = `
Object {
  "columns": Array [
    1,
    3,
    5,
  ],
  "lines": Array [
    2,
    2,
    2,
  ],
  "tokens": Array [
    "a",
    "=",
    "b",
  ],
}
`;

exports[`tokenizer should add multi line commented text 1`] = `
Object {
  "columns": Array [
    1,
    1,
    3,
    17,
  ],
  "lines": Array [
    2,
    3,
    6,
    6,
  ],
  "tokens": Array [
    "text",
    "/*",
    "
with
comment
",
    "*/",
  ],
}
`;

exports[`tokenizer should add simple text 1`] = `
Object {
  "columns": Array [
    1,
  ],
  "lines": Array [
    2,
  ],
  "tokens": Array [
    "text",
  ],
}
`;

exports[`tokenizer should add single line commented text 1`] = `
Object {
  "columns": Array [
    1,
    1,
    3,
  ],
  "lines": Array [
    2,
    3,
    3,
  ],
  "tokens": Array [
    "text",
    "//",
    " with comment",
  ],
}
`;

exports[`tokenizer should add single quoted escaped text 1`] = `
Object {
  "columns": Array [
    1,
    8,
    14,
  ],
  "lines": Array [
    2,
    2,
    2,
  ],
  "tokens": Array [
    "single",
    "quoted",
    "'text's spaces'",
  ],
}
`;

exports[`tokenizer should add single quoted text 1`] = `
Object {
  "columns": Array [
    1,
    8,
    14,
  ],
  "lines": Array [
    2,
    2,
    2,
  ],
  "tokens": Array [
    "single",
    "quoted",
    "'text with spaces'",
  ],
}
`;

exports[`tokenizer should add text escapes 1`] = `
Object {
  "columns": Array [
    1,
    6,
    8,
  ],
  "lines": Array [
    2,
    2,
    2,
  ],
  "tokens": Array [
    "text",
    "\\\\",
    "escapes",
  ],
}
`;

exports[`tokenizer should add text with spaces 1`] = `
Object {
  "columns": Array [
    1,
    6,
    11,
  ],
  "lines": Array [
    2,
    2,
    2,
  ],
  "tokens": Array [
    "text",
    "with",
    "spaces",
  ],
}
`;
